# irctc-mcp

./: .gitignore  example-new-status.json  example-pnr.json  example-train-status.json  example2-trainstatus.json  example2_pnr_status.json  main.py  main_mcp.py  new_mcp.py  new_pnr_schema.py  new_pnr_status.py  new_train_status_functions.py  new_train_status_schemas.py  newpnr.test.py  newtrainstatus.test.py  pnr_functions.py  pnr_mcp.py  pnr_schemas.py  pyproject.toml  schemas.py  status_decoders.py  test_new_train_status.py  test_newtrainstatus.py  test_pnr.py  train_status_functions.py  train_status_schemas.py  weather.py
