[project]
name = "irctc-mcp"
version = "0.1.0"
description = "This is a Model Context Protocol server to enable AI Agents get live updates on Indian Railways PNR no. and train running status."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "pytest>=9.0.2",
]
